# eoi-can

./: .gitignore  CAN_MESSAGES.md  Cargo.toml  README.md  build-and-send-to-datalogger.sh  build-and-send.sh  rust-toolchain.toml
.cargo/: config.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
can-display-firmware/: Cargo.toml  build.rs
can-display-firmware/.cargo/: config.toml
can-display-firmware/src/: main.rs
can-display-framebuffer/: Cargo.toml
can-display-framebuffer/src/: main.rs
can-display-sim/: Cargo.toml  readme.md
can-display-sim/src/: main.rs
draw-display/: Cargo.toml  build.rs
draw-display/src/: can_frame.rs  lib.rs  time.rs
eoi-can-decoder/: Cargo.toml
eoi-can-decoder/src/: can_collector.rs  can_frame.rs  lib.rs
eoi-can-display-firmware/: Cargo.toml
eoi-can-display-firmware/.cargo/: config.toml
eoi-can-display-firmware/src/: main.rs
eoi-can-display-framebuffer/: Cargo.toml
eoi-can-display-framebuffer/src/: main.rs
eoi-can-display-simulator/: Cargo.toml  readme.md
eoi-can-display-simulator/.cargo/: config.toml
eoi-can-display-simulator/src/: main.rs
eoi-can-to-mqtt/: Cargo.toml
eoi-can-to-mqtt/src/: ha_discovery.rs  main.rs  mqtt_settings.rs
eoi-gnss-to-can/: Cargo.toml
eoi-gnss-to-can/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: can_decoder.rs
get-wifi-ip/: Cargo.toml
get-wifi-ip/src/: lib.rs
pisugar/: Cargo.toml
pisugar/src/: lib.rs
src/: main.rs
support/: auto-poweroff.sh  eoi-auto-poweroff.service  eoi-can-display.service  eoi-can-init.service  eoi-can-logger.service  eoi-can-to-mqtt-old.service  eoi-can-to-mqtt.service  eoi-gnss-to-can.service  install.sh  status.sh
