[package]
name = "can-display"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
embassy-executor = { version = "0.7.0"}
embassy-sync = {version = "0.6.2" }

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
defmt = "0.3.10"
defmt-rtt = "0.4"
embassy-embedded-hal = "0.3.0"
embassy-executor = { workspace = true, features = ["executor-thread"] }
embassy-futures = "0.1.1"
embassy-sync = { workspace = true }
embassy-stm32 = { version = "0.2.0", features = ["stm32l471rg", "defmt", "memory-x", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
futures = { version = "0.3.30", default-features = false, features = ["async-await"] }
heapless = "0.8.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = { version = "2.0.0" }
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
nb = "1.1.0"
epd-waveshare = "0.6.0"
embedded-graphics = "0.8.1"
profont = "0.7.0"
arrform = "0.1.1"


[target.'cfg(target_arch = "arm")'.dependencies]
embassy-executor = { workspace = true,  features = ["arch-cortex-m", "task-arena-size-32768"] }

[target.'cfg(any(unix,windows))'.dependencies]
embassy-executor = { workspace = true, features = ["arch-std"] }
embassy-sync = { workspace = true, features = ["std"] }

[patch.crates-io]
embedded-can = { git = "https://github.com/rust-embedded/embedded-hal/", rev = "6a7d02687db8dbfd16b55f29ade3e48bbbedbcde" }

[profile.release]
lto = true
debug = true

[profile.dev]
opt-level = 3
lto = true
