[workspace]
resolver = "3"

members = [ "eoi-can-display-simulator", "eoi-can-display-framebuffer", "draw-display", "eoi-can-decoder", "eoi-gnss-to-can" ]
exclude = [ "eoi-can-display-firmware", "fuzz" ]

[workspace.dependencies]
embedded-graphics = "0.8.1"
clap = { version = "4.5.37", features = [ "derive" ] }
socketcan = { version = "3.5.0", features = [ "tokio" ] }
embedded-can = "0.4.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "env-filter" ] }
tokio = { version = "1.44.2", features = [ "full" ] }
