[package]
name = "can-display-sim"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics-simulator = "0.7.0"
draw-display = { path = "../draw-display", features = [ "std" ] }
eoi-can-decoder = { path = "../eoi-can-decoder" }

embedded-graphics.workspace = true
clap.workspace = true
socketcan.workspace = true
embedded-can.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
