[package]
name = "draw-display"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.8", features = [ "git2" ] }

[features]
default = [ "std" ]
defmt = [ "dep:defmt", "eoi-can-decoder/defmt" ]
std = [ "tokio" ]
tokio = [ "dep:tokio" ]

[dependencies]
embedded-graphics = { workspace = true }
tinybmp = { version = "0.6.0" }
heapless = "0.8.0"
defmt = { version = "0.3", optional = true }
embassy-time = { version = "0.4" }
tokio = { version = "1.43.0", features = [ "full" ], optional = true }
eoi-can-decoder = { path = "../eoi-can-decoder" }
