[package]
name = "eoi-can-decoder"
version = "0.1.0"
edition = "2021"

[features]
default = [  ]
defmt = [ "dep:defmt" ]
arbitrary = [ "dep:arbitrary" ]

[dependencies]
heapless = "0.8.0"
embedded-can = "0.4.1"
defmt = { version = "0.3", optional = true }
arbitrary = { version = "1", optional = true, features = [ "derive" ] }
serde = { version = "1.0", features = [ "derive" ], default-features = false }

[dev-dependencies]
assert2 = "0.3"
