[package]
name = "eoi-can-display-firmware"
description = "Firmware for the EOI CAN display, which is a 2.9 inch e-paper display with CAN bus interface."
version = "0.1.0"
edition = "2021"

[dependencies]
draw-display = { path = "../draw-display", features = [ "defmt" ], default-features = false }
eoi-can-decoder = { path = "../eoi-can-decoder", features = [ "defmt" ] }

cortex-m = { version = "0.7.7", features = [ "critical-section-single-core" ] }
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.4"
embassy-embedded-hal = "0.3.0"
embassy-executor = { version = "0.7.0", features = [ "arch-cortex-m", "task-arena-size-65536", "executor-thread" ] }
embassy-futures = "0.1.1"
embassy-stm32 = { version = "0.2.0", features = [ "stm32l471rg", "defmt", "memory-x", "unstable-pac", "memory-x", "time-driver-any", "exti", "chrono" ] }
embassy-sync = { version = "0.6.2" }
embassy-time = { version = "0.4.0", features = [ "defmt", "defmt-timestamp-uptime", "tick-hz-32_768" ] }
futures = { version = "0.3.30", default-features = false, features = [ "async-await" ] }
heapless = "0.8.0"
panic-probe = { version = "0.3", features = [ "print-defmt" ] }
static_cell = { version = "2.0.0" }
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
nb = "1.1.0"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", rev = "1edb243c7328557304e253ef8c4401157ba96b3a" }
embedded-graphics = "0.8.1"
profont = "0.7.0"
arrform = "0.1.1"

[profile.release]
lto = true
debug = true

[profile.dev]
opt-level = 3
lto = true
