[package]
name = "eoi-can-display-framebuffer"
description = "Firmware for the EOI CAN display, which can run on the datalogger and use the framebuffer to display the data (on the LCD)."
version = "0.1.0"
edition = "2024"

[dependencies]
embedded_graphics_framebuffer = { git = "https://github.com/vji2i0/embedded_graphics_framebuffer", rev = "3e8a1e8813041af485cc03ef2b2ef33f761fbc03" }

draw-display = { path = "../draw-display", features = [ "std" ] }
eoi-can-decoder = { path = "../eoi-can-decoder" }

embedded-graphics.workspace = true
clap.workspace = true
socketcan.workspace = true
embedded-can.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
